# cpp_imu_reader

./: .gitignore  CMakeLists.txt  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  build.bat  build.sh  config.ini  imu_uart.py  verify_config.cpp  verify_subscribe_tag.cpp
example/: main.cpp
include/: config_parser.h  imu_parser.h  imu_reader.h
rules.d/: 99-lightyear-libusb.rules  add_udev.md
src/: config_parser.cpp  imu_parser.cpp  imu_reader.cpp
